apps/base/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      securityContext:
        fsGroup: 1000 # www-data group ID
        runAsUser: 1000 # www-data user ID
        runAsGroup: 1000 # www-data group ID
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.5.0

          ports:
            - containerPort: 9000
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
            - name: nltk-data
              mountPath: /nltk_data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
          claimName: mealie-data-pvc
        - name: nltk-data
          emtpyDir: {}
